--- a/package.json
+++ b/package.json
@@ -8,9 +8,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@3rdweb/hooks": "^1.8.0",
+    "@3rdweb/react": "^1.8.1",
+    "@3rdweb/sdk": "^1.36.9",
+    "@sanity/client": "^2.23.2",
+    "@sanity/image-url": "^1.0.1",
+    "dotenv": "^14.2.0",
+    "ethers": "^5.5.3",
     "next": "12.0.8",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-chartjs-2": "^4.0.1",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-loader-spinner": "^5.1.0",
+    "react-modal": "^3.14.4",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "eslint": "8.7.0",
